# redu

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build.yaml  release.yaml  rust.yml
benches/: cache.rs
scripts/: release.sh
src/: app.rs  args.rs  cache.rs  lib.rs  main.rs  ncdu.rs  reporter.rs  restic.rs  state.rs  tui.rs  types.rs  ui.rs  util.rs
src/cache/: filetree.rs  mod.rs  tests.rs
src/cache/sql/: init.sql  none_to_v1.sql  v0_to_v1.sql
src/cache/sql_migrations/: V0__Initial.sql  V1__Paths_Entries_NoGroups.sql
src/component/: app.rs  heading.rs  list.rs  mod.rs
src/sql/: init.sql
src/widget/: app.rs  list.rs
