[package]
name = "redu"
version = "0.1.0"
authors = ["Daniel Rebelo de Oliveira <drdo@drdo.eu>"]
license = "MIT"
homepage = "https://github.com/drdo/redu"
repository = "https://github.com/drdo/redu"
keywords = ["cli", "restic", "du", "ncdu", "backup"]
categories = ["command-line-utilities"]
edition = "2021"
description = "This is like ncdu for a restic repository."

[dependencies]
anyhow = "*"
scopeguard = "*"
camino = "*"
chrono = "*"
clap = { version = "*", features = ["derive"] }
crossterm = "*"
directories = "5"
fallible-iterator = "*"
flexi_logger = "*"
humansize = "*"
indicatif = "*"
log = "*"
nix = { version = "*", features = ["process"] }
ratatui = { version = "*", features = ["unstable-widget-ref"] }
rusqlite = { version = "*", features = ["bundled", "functions", "trace"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
unicode-segmentation = "*"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dorestic"
path = "src/main.rs"

[features]
bench = []

[profile.release]
codegen-units = 1
lto = "fat"

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }
uuid = { version = "*", features = ["v4"] }

[[bench]]
name = "cache"
harness = false
