[package]
name = "redu"
version = "0.1.0"
authors = ["Daniel Rebelo de Oliveira <drdo@drdo.eu>"]
license = "MIT"
homepage = "https://github.com/drdo/redu"
repository = "https://github.com/drdo/redu"
keywords = ["cli", "restic", "du", "ncdu", "backup"]
categories = ["command-line-utilities"]
edition = "2021"
description = "This is like ncdu for a restic repository."

[dependencies]
anyhow = "1"
scopeguard = "1"
camino = "1"
clap = { version = "=4.5.0", features = ["derive"] } # Fixing this to not pull in "heck" twice
crossterm = "0.27"
directories = "5"
flexi_logger = "0.28"
humansize = "2"
indicatif = "0.17"
log = "0.4"
nix = { version = "0.28", features = ["process"] }
ratatui = { version = "0.26", features = ["unstable-widget-ref"] }
rusqlite = { version = "0.31", features = ["bundled", "functions", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
unicode-segmentation = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "redu"
path = "src/main.rs"

[features]
bench = []

[profile.release]
codegen-units = 1
lto = "fat"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v4"] }

[[bench]]
name = "cache"
harness = false
