[package]
name = "redu"
version = "0.2.8"
authors = ["Daniel Rebelo de Oliveira <drdo@drdo.eu>"]
license = "MIT"
homepage = "https://github.com/drdo/redu"
repository = "https://github.com/drdo/redu"
keywords = ["restic", "ncdu", "disk", "usage", "analyzer"]
categories = ["command-line-utilities"]
edition = "2021"
description = "This is like ncdu for a restic repository."

[dependencies]
anyhow = "1"
camino = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
directories = "5"
flexi_logger = "0.28"
humansize = "2"
indicatif = "0.17"
log = "0.4"
rand = "0.8"
ratatui = { version = "0.28", features = [
        "unstable-rendered-line-info",
        "unstable-widget-ref",
] }
rpassword = "7.3.1"
rusqlite = { version = "0.32", features = ["bundled", "functions", "trace"] }
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "redu"
path = "src/main.rs"

[features]
bench = ["uuid"]

[profile.release]
codegen-units = 1
lto = "fat"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v4"] }

[[bench]]
name = "cache"
harness = false
